Only show add project when logge in

--- a/client/header.html
+++ b/client/header.html
@@ -1,11 +1,13 @@
 <template name="header">
 <div class="navbar navbar-default" role="navigation">
   <div class="navbar-header">
-    <a class="navbar-brand" href="#">data.sp.se</a>
+    <a class="navbar-brand" href="{{pathFor 'projectsList'}}">data.sp.se</a>
   </div>
   <div class="navbar-collapse collapse">
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Link</a></li>
+      {{#if currentUser}}
+      <li><a href="{{pathFor 'projectSubmit'}}">Add Project</a></li>
+      {{/if}}
     </ul>
     <ul class="nav navbar-nav navbar-right">
       {{ loginButtons align="right"}}
